# plymouth-theme

./: README.md
pisilinux/: pisilinux.plymouth.in  tarball.sh
pisilinux1/: Makefile.am  pisilinux.plymouth  pisilinux.script
plymouth-pisilinux/: Makefile.am  pisilinux.script
